Alteration on the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
+*.egg-info
+*.pot
+*.py[co]
+*.orig
+*.log
+*.mo
+__pycache__
+__pycache__/
+/.idea/
+.project
+.pydevproject
+**/db.sqlite3
+.cache/
+.venv
+.coverage
+/htmlcov/
+.pytest_cache/
+sqlite3.db
+.DS_Store
 venv/
-db.sqlite3
-.idea/
-bids/__pycache__/*
-bids/__pycache__/
-BidsProject/__pycache__/*
-BidsProject/__pycache__/
-bids/migrations/__pycache__/
-.vscode/
