--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ MarkupSafe==1.1.1
 more-itertools==8.4.0
 openapi-codec==1.3.2
 packaging==20.4
-Pillow==5.0.0
+pillow>=7.1.0
 pluggy==0.13.1
 py==1.8.2
 pyparsing==2.4.7
