--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,13 @@ certifi==2020.6.20
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==5.5
 Django==3.1.13
+django-cors-headers==3.9.0
+django-debug-toolbar==2.2.1
 django-filter==2.3.0
 django-rest-swagger==2.2.0
+django-widget-tweaks==1.4.8
 djangorestframework==3.11.2
 drf-yasg==1.17.1
 factory-boy==2.12.0
@@ -21,11 +25,12 @@ MarkupSafe==1.1.1
 more-itertools==8.4.0
 openapi-codec==1.3.2
 packaging==20.4
-pillow>=7.1.0
+Pillow==8.3.2
 pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==5.4.3
+pytest-cov==2.6.1
 pytest-django==3.9.0
 pytest-factoryboy==2.0.3
 python-dateutil==2.8.1
@@ -41,6 +46,3 @@ uritemplate==3.0.1
 urllib3==1.26.5
 wcwidth==0.2.4
 zipp==3.1.0
-pytest-cov==2.6.*
-django-debug-toolbar==2.2.1
-django-cors-headers
