--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,19 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==5.5
+dj-database-url==0.5.0
 Django==3.1.13
 django-cors-headers==3.9.0
 django-debug-toolbar==2.2.1
 django-filter==2.3.0
+django-heroku==0.3.1
 django-rest-swagger==2.2.0
 django-widget-tweaks==1.4.8
 djangorestframework==3.11.2
 drf-yasg==1.17.1
 factory-boy==2.12.0
 Faker==4.1.1
+gunicorn==20.1.0
 idna==2.9
 importlib-metadata==1.6.1
 inflection==0.5.0
@@ -46,4 +49,5 @@ text-unidecode==1.3
 uritemplate==3.0.1
 urllib3==1.26.5
 wcwidth==0.2.4
+whitenoise==5.3.0
 zipp==3.1.0
